--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "server": "nodemon src/server.ts"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.11"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/mongoose": "^5.10.3",
+    "cross-env": "^7.0.3",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
