--- a/package.json
+++ b/package.json
@@ -10,20 +10,26 @@
     "server": "nodemon src/server.ts"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "envalid": "^6.0.2",
     "express": "^4.17.1",
+    "gravatar": "^1.8.1",
     "helmet": "^4.3.1",
     "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.11",
     "morgan": "^1.10.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
+    "@types/gravatar": "^1.8.1",
     "@types/hpp": "^0.2.1",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.3",
     "@types/morgan": "^1.9.2",
     "cross-env": "^7.0.3",
