--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.11",
     "morgan": "^1.10.0",
+    "validator": "^13.5.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
