--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "mongoose": "^5.11.11",
     "morgan": "^1.10.0",
     "normalize-url": "^6.0.0",
+    "swagger-ui-express": "^4.1.6",
     "validator": "^13.5.2",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
@@ -34,6 +36,8 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.3",
     "@types/morgan": "^1.9.2",
+    "@types/swagger-ui-express": "^4.1.2",
+    "@types/yamljs": "^0.2.31",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
