--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "author": "phamquyetthang <quyetthang.phucchi@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "server": "nodemon src/server.ts"
+    "server": "nodemon src/server.ts",
+    "build": "webpack",
+    "start": "node dist/server.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -36,8 +38,13 @@
     "@types/morgan": "^1.9.2",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.7",
+    "ts-loader": "^8.1.0",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.3"
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
+    "typescript": "^4.1.3",
+    "webpack": "^5.33.2",
+    "webpack-cli": "^4.6.0",
+    "webpack-node-externals": "^2.5.2"
   }
 }
