--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "dotenv": "^8.2.0",
     "envalid": "^6.0.2",
     "express": "^4.17.1",
+    "firebase-admin": "^9.6.0",
     "gravatar": "^1.8.1",
     "helmet": "^4.3.1",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.11",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "normalize-url": "^6.0.0",
     "validator": "^13.5.2",
     "winston": "^3.3.3"
@@ -36,6 +38,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.3",
     "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.5",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.7",
     "ts-loader": "^8.1.0",
