--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
+    "@types/formidable": "^1.2.1",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "envalid": "^6.0.2",
     "express": "^4.17.1",
     "firebase-admin": "^9.6.0",
+    "formidable": "^1.2.2",
     "gravatar": "^1.8.1",
     "helmet": "^4.3.1",
     "hpp": "^0.2.3",
